# pin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.org  THANKS  bootstrap  configure.ac
.github/workflows/: ci.yml  release.yml
admin/: cargo-build-test-smoke  run-linters  signoff
doc/: .gitignore  Makefile.am  pin-delete.1  pin-get-tags.1  pin-rename-tag.1  pin-send.1  pin.1  pin.texi
pin/: .gitignore  Cargo.toml.in  Makefile.am
pin/src/: config.rs  error_from.rs  instapaper.rs  lib.rs  main.rs  pinboard.rs  url-stream.rs  vars.rs.in
